# ircawp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Justfile  Makefile  README.md  bot-queue.py  bot.py  cli.py  ircawp.py  models.example.json  pyproject.toml  requirements.txt  setup.sh  utils.py
app/: __main__.py  ircawp.py  types.py
app/backends/: Ircawp_Backend.py  old.llamacpp.py  ollama.py  openai.py  tools_manager.py
app/backends/disabled/: ollama.py
app/backends/tools/: README.md  TOOL_CALLING_BEST_PRACTICES.md  TOOL_EXPERTISE_AREAS.md  ToolBase.py  USAGE.md  __init__.py
app/backends/tools/_disabled/create_image/: __init__.py  tool.py
app/backends/tools/calculator/: tool.py
app/backends/tools/example/: __init__.py  tool.py
app/backends/tools/network_ping/: __init__.py  tool.py
app/backends/tools/network_whois/: tool.py
app/backends/tools/weather/: tool.py
app/backends/tools/wikipedia/: tool.py
app/core/: __init__.py  media_manager.py  message_router.py  plugin_manager.py  url_extractor.py
app/frontends/: Ircawp_Frontend.py  slack.py
app/lib/: args.py  cache.py  config.py  llm_helpers.py  network.py  template_str.py  thread_history.py  transcription.py  youtube.py
app/media_backends/: BaseImageGen.py  MediaBackend.py  __MediaBackend.py  __init__.py  flux2klein.py  hyper_sdxl.py  sd15.py  sdxs.py  zimageturbo.py
app/media_backends/_disabled/: flux copy.py  flux.py
app/media_backends/upscaler/: upscaler.py
app/media_backends_archive/: flux2klein.py  sdxs.py
app/media_backends_archive/_disabled/: flux.py
app/plugins/: 8ball.py  __AskBase.py  __AskPlugin.py  __PluginBase.py  __PluginCharacter.py  __init__.py  askatherapist.py  askhawkeye.py  askjesus.py  askpicard.py  askspock.py  geolocate.py  help.py  hn.py  img.py  news.py  raw.py  saysforty.py  sdxs.py  summarize.py  tools.py  transcribe.py  translate.py  uptime.py  weather.py  yt.py
app/plugins/_img_utils/: batch.py  paths.py  redo.py  remix.py  single.py  wordle.py
app/plugins/disabled/: reverse.py  saysforty.py  summary.py  wikipedia.py
attic/: SummaryFunction0.py
backends/: BaseBackend.py  __init__.py  gpt2.py  llamacpp.py  ollama.py
backends/llamacpp/: backend.py
backends/llamacpp/functions/: BaseFunction.py  HelpFunction.py  ReverseFunction.py  SummaryFunction.py  SummaryFunction0.py  __init__.py
docs/: LOG_COLORS.md
functions/: AskJesusFunction.py  HelpFunction.py  ReverseFunction.py  SummaryFunction.py  SummaryFunction0.py  WeatherFunction.py  __init__.py  askhawkeye.py  askjesus.py  help.py  uptime.py  weather.py
imagegen/: SDXS.py  __init__.py
lib/: reduce.py
media-server/: README.md  pyproject.toml  requirements.txt
media-server/app/: main.py  models.py
media-server/app/backends/: MediaBackend.py  flux2klein.py  hyper_sdxl.py  sd15.py  sdxs.py  upscaler.py  zimageturbo.py
plugins/: AskBase.py  AskPlugin.py  __AskBase.py  __init__.py  askatherapist.py  askhawkeye.py  askjesus.py  askpicard.py  askspock.py  help.py  raw.py  reverse.py  sdxs.py  summary.py  uptime.py  weather.py  wikipedia.py
plugins/disabled/: reverse.py  summary.py  wikipedia.py
scripts/: .env.example  config-example.json  test-reduce-html.py  test_fetchhtml.py  tool_diag.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py  test_core_services.py  test_openai_wikipedia_check.py
tests/unit/plugins/: __init__.py  test_plugin_framework.py
tests/unit/tools/: __init__.py  test_tool_framework.py
utils/: reduce.py
