[project]
name = "ircawp"
version = "0.1.0"
description = "Slack bot"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "accelerate>=1.10.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "appier>=1.34.8",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "autopep8>=2.3.2",
    "beautifulsoup4>=4.13.5",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "commonmark>=0.9.1",
    "diffusers>=0.35.1",
    "feedparser>=6.0.11",
    "frozenlist>=1.7.0",
    "idna>=3.10",
    "langchain>=0.3.27",
    "llama-cpp-python>=0.3.16",
    "multidict>=6.6.4",
    "numpy>=1.26.4",
    "ollama>=0.5.3",
    "optimum-quanto>=0.2.7",
    "packaging>=25.0",
    "pycodestyle>=2.14.0",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "slack-bolt>=1.24.0",
    "tomli>=2.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "tts==0.21.3",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "yarl>=1.20.1",
]
