[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ircawp-media-server"
version = "0.1.0"
description = "Image generation server for ircawp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "Pillow>=10.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "numpy>=1.26.4",
    "diffusers",
    "safetensors",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }

[tool.hatch.build.targets.wheel]
packages = ["app"]
